Changed login page to be for SMMApp.

--- a/app/server/views/login.jade
+++ b/app/server/views/login.jade
@@ -4,8 +4,8 @@ extends layout
 block content
 	#login-container
 		form( method="post")#login-form.well.span4
-			h1 Hello!
-			p.subheading Please Login To Your Account
+			h1 Welcome to SMMApp!
+			p.subheading Please Login To Your SMMApp Account
 			label Username 
 			input(type="text", name="user", id='user-tf').span4.required
 			label Password
