Major upgrades to app all throughout. Now we can get working on the functionality.

--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -16,6 +16,18 @@ body
 	background -ms-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* IE10+ */
 	background radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* W3C */
 	
+body.hasNavigation
+	padding-top 40px
+
+h1
+	color #8b1c1c;
+#global-nav li a
+	color white // #8b1c1c;
+
+.navbar #global-nav li a.brand
+	color #8b1c1c;
+	font-weight bold;
+
 // login form //
     
 #login-container{
@@ -97,9 +109,9 @@ body
     
 #btn-logout
 	width 100px
-	top 1px
-	right 8px
-	position absolute
+	//top 1px
+	//right 8px
+	//position absolute
 	 
 // support pages //
 
