--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -16,6 +16,19 @@ body {
   background: radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
 /* W3C */
 }
+body.hasNavigation {
+  padding-top: 40px;
+}
+h1 {
+  color: #8b1c1c;
+}
+#global-nav li a {
+  color: #fff;
+}
+.navbar #global-nav li a.brand {
+  color: #8b1c1c;
+  font-weight: bold;
+}
 #login-container {
   width: 340px;
   margin: 160px auto;
@@ -94,9 +107,6 @@ body {
 }
 #btn-logout {
   width: 100px;
-  top: 1px;
-  right: 8px;
-  position: absolute;
 }
 #print {
   padding: 20px;
