--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -1,25 +1,10 @@
-
-extends layout
+extends layout_nav
 
 block content
-	div.navbar.navbar-fixed-top
-		div.navbar-inner
-			div.container-fluid
-				ul#global-nav.nav.pull-left
-					a(href='#').brand Control Panel
-				button#btn-logout.btn.btn-primary
-					i.icon-lock.icon-white
-					| Sign Out
-
-	include account
-	include modals/alert
-	include modals/confirm
+	div.container
+		br
+		div.well
+			h1 	Welcome to SMU CS
+			p 	Feel free to browser around.
 
 block scripts
-	script(src='/vendor/jquery.min.js')
-	script(src='/vendor/jquery.form.js')
-	script(src='/vendor/bootstrap-modal.js')
-	script(src='/vendor/bootstrap-transition.js')
-	script(src='/js/views/home.js')
-	script(src='/js/controllers/homeController.js')
-	script(src='/js/form-validators/accountValidator.js')
