--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,12 +1,10 @@
 !!! 5
 html
 	head
-		title Saint Mary's Mobile App
+		title SMUCS
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
-		
 	body
-		a(href="https://github.com/Glavin001/SMMApp2",target="_blank")
-			img#github-banner(style="position:absolute;top:0px;right:0;border:0;", src="https://a248.e.akamai.net/camo.github.com/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67", alt="Fork me on GitHub")
+		//-include github_banner
 	block content
 	block scripts
