--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -8,6 +8,7 @@ body
 	margin  0
 	padding  0
 	height  100%
+	width 100%
 	background rgb(242,249,254)
 	background -moz-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%, rgba(214,240,253,1) 100%) /* FF3.6+ */
 	background -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(242,249,254,1)), color-stop(100%,rgba(214,240,253,1))) /* Chrome,Safari4+ */
