--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -1,10 +1,11 @@
 extends layout_nav
 
+block header
+	include leaflet.jade
+
 block content
-	div.container
-		br
-		div.well
-			h1 	Welcome to SMU CS
-			p 	Feel free to browser around.
+	div.container(style="height:100%; width:100%;")
+		div#map(style="width:100%; position: absolute; top:40px; bottom:0px;")
 
 block scripts
+	script(src="/js/controllers/mapController.js")
