--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -2,8 +2,10 @@
 html
 	head
 		title SMUCS
+		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
+		block header
 	body
 		//-include github_banner
 	block content
