--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -2,8 +2,11 @@
 html
 	head
 		title #{title}
+		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
+		block header
+
 	body.hasNavigation
 		//-include github_banner
 		include navbar
