Closes #15. Added Socket.io and setup Express/Socket.io handshake.

--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -9,4 +9,15 @@ html
 	body
 		//-include github_banner
 	block content
+	
+	//- jQuery
+	script(src='/vendor/jquery.min.js')
+	script(src='/vendor/jquery.form.js')
+	//- Bootstrap
+	script(src='/vendor/bootstrap-modal.js')
+	script(src='/vendor/bootstrap-transition.js')
+	//- Socket.io
+	script(src="/socket.io/socket.io.js")
+	script(src="/js/controllers/socketController.js")		
+	
 	block scripts
