--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -22,12 +22,9 @@ html
 	//- Bootstrap
 	script(src='/vendor/bootstrap-modal.js')
 	script(src='/vendor/bootstrap-transition.js')
-	//- GoInstant
-	//-include goinstant
 	//- Socket.io
-	//-script(src="/socket.io/socket.io.js")	
-	//- Chat
-	//-include chat
+	script(src="/socket.io/socket.io.js")
+	script(src="/js/controllers/socketController.js")		
 	//- For Account management and logging out	
 	script(src='/js/views/home.js')
 	script(src='/js/controllers/homeController.js')
