--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -1,5 +1,5 @@
 !!! 5
-html
+html(lang="en", manifest="/appcache")
 	head
 		title #{title}
 		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
