--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html(lang="en", manifest="/appcache")
 	head
-		title SMUCS
+		title #{title}
 		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
 		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/style.css')
