--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -1,5 +1,6 @@
 !!! 5
-html(lang="en", manifest="/appcache")
+//- html (lang="en", manifest="/appcache")
+html
 	head
 		title #{title}
 		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
