Started working on #11. Upgrading to Bootstrap 3.

--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -3,14 +3,16 @@
 html
 	head
 		title #{title}
-		meta(name="viewport" content="width=device-width, initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
-		link(rel='stylesheet', href='/vendor/bootstrap.min.css')
+		meta(name="viewport", content="width=device-width", initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
+
+		include vendors
+		
 		link(rel='stylesheet', href='/css/style.css')
+		
 		block header
 	body
 		//-include github_banner
 	block content
 	
-	include vendors
 
 	block scripts
