--- a/app/server/views/vendors.jade
+++ b/app/server/views/vendors.jade
@@ -2,8 +2,7 @@
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/jquery.form.js')
 //- Bootstrap
-script(src='/vendor/bootstrap-modal.js')
-script(src='/vendor/bootstrap-transition.js')
+include bootstrap
 //- Socket.io
 script(src="/socket.io/socket.io.js")
 script(src="/js/controllers/socketController.js")		
