--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,8 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -16,6 +21,7 @@ body {
 /* IE10+ */
   background: radial-gradient(center, ellipse cover, #f2f9fe 0%, #d6f0fd 100%);
 /* W3C */
+  background: #fff;
 }
 body.hasNavigation {
   padding-top: 40px;
