--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -4,6 +4,10 @@ raiseText()
 	-moz-text-shadow: -1px 1px 0 white
 	-webkit-text-shadow: -1px 1px 0 white
 
+html, body
+	width 100%
+	height 100%
+
 body 
 	margin  0
 	padding  0
@@ -16,6 +20,7 @@ body
 	background -o-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* Opera 12+ */
 	background -ms-radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* IE10+ */
 	background radial-gradient(center, ellipse cover,  rgba(242,249,254,1) 0%,rgba(214,240,253,1) 100%) /* W3C */
+	background white
 	
 body.hasNavigation
 	padding-top 40px
