--- a/app/server/views/builder_external.jade
+++ b/app/server/views/builder_external.jade
@@ -1,20 +1,26 @@
 extends layout
 
 block header
-	link(rel="stylesheet", href="/vendor/codemirror/lib/codemirror.css")
-	script(src="/vendor/codemirror/lib/codemirror.js")
+	link(rel='stylesheet', href='/css/editor.css')
+	include codemirror
+	//- CodeMirror Addons
+	script(src="/vendor/codemirror/addon/edit/matchbrackets.js")
+	script(src="/vendor/codemirror/addon/comment/continuecomment.js")
+	script(src="/vendor/codemirror/addon/comment/comment.js")
+	script(src="/vendor/codemirror/mode/javascript/javascript.js")
 
 block content
-	div.container(style="height:100%; width:100%;")
-		ul.nav.nav-tabs#test
+	div.container(style="height:100%; width:100%; padding-right:0px; padding-left:0px;")
+		ul.nav.nav-tabs
 			li.active
 				a(href="#editor", data-toggle="tab") Editor
 			li
-				a(href="#editor2", data-toggle="tab") Tab2
+				a(href="#extras", data-toggle="tab") Extras
 		div.tab-content
-			div.tab-pane.active#editor
+			div.tab-pane.active.fade.in#editor
 				textarea#codeEditor	
-			div.tab-pane#editor2
+			div.tab-pane.fade#extras
+				p.well Coming soon.
 
 		
 block scripts
