--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -4,10 +4,16 @@ html
 	head
 		title #{title}
 		meta(name="viewport", content="width=device-width", initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
+		meta(http-equiv="cache-control", content="max-age=0")
+		meta(http-equiv="cache-control", content="no-cache")
+		meta(http-equiv="expires", content="0")
+		meta(http-equiv="expires", content="Tue, 01 Jan 1980 1:00:00 GMT")
+		meta(http-equiv="pragma", content="no-cache")
 
 		include vendors
 
 		link(rel='stylesheet', href='/css/style.css')
+		
 		block header
 
 	body.hasNavigation
