--- a/app/server/views/navbar.jade
+++ b/app/server/views/navbar.jade
@@ -8,6 +8,12 @@ div.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
             span.icon-bar 
           a.navbar-brand(href="#") SMU Mobile
         div.navbar-collapse.collapse
+          ul.nav.navbar-nav
+              li
+                a(href="/home") Home
+              li
+                a(href="/builder") Builder
+
           form.navbar-form.navbar-right
             if udata && udata.name
               a.btn.btn-info(href="/account")
