See #14. Rendering GeoJSON data and auto-rendering with checkbox.

--- a/app/public/css/editor.styl
+++ b/app/public/css/editor.styl
@@ -4,3 +4,12 @@ html, body
 .tab-content, #editor, #editor .CodeMirror
 	height 100%
 
+.nav-tabs>li>a.control-btn:hover
+	color: #555;
+	cursor: default;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	border-bottom-color: transparent; 
+	border-color: #eee #eee #ddd;
+	text-decoration: none;
+	background-color: #eee;
