See #14. Using CodeMirror editor change events and only updating when JSON is valid and not clearing map view until valid GeoJSON is ready to be rendered.

--- a/app/server/views/builder_external.jade
+++ b/app/server/views/builder_external.jade
@@ -29,7 +29,7 @@ block content
 			li
 				a.btn
 					label(style="margin-bottom:0px;")
-						input(type="checkbox").auto-render 
+						input(type="checkbox", checked="checked").auto-render 
 						span Auto-Render
 
 		div.tab-content
