See #14. Added start interactive map builder.

--- a/app/server/views/builder_external.jade
+++ b/app/server/views/builder_external.jade
@@ -36,7 +36,8 @@ block content
 			div.tab-pane.active.fade.in#editor
 				textarea#codeEditor	{ }
 			div.tab-pane.fade#extras
-				p.well Coming soon.
+				p.well
+					button.btn.btn-info Add Building
 		
 block scripts
 	script(src="/js/controllers/editorController.js")
