--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -13,6 +13,7 @@ html
 		include vendors
 
 		link(rel='stylesheet', href='/css/style.css')
+		link(rel='stylesheet', href='/css/map.css')
 		
 		block header
 
