--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -3,7 +3,7 @@
 html
 	head
 		title #{title}
-		meta(name="viewport", content="width=device-width", initial-scale="1.0", maximum-scale="1.0", user-scalable="no") //- For Mobile
+		meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no") //- For Mobile
 		meta(name="apple-mobile-web-app-capable", content="yes")
 
 		include vendors
