Closes #27. Added 3D OSM Buildings to Leaflet.

--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -20,4 +20,5 @@ block content
 							i.glyphicon.glyphicon-cog 
 
 block scripts
+	script(src="/vendor/OSMBuildings-Leaflet.js")
 	script(src="/js/controllers/mapController.js")
