--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -13,19 +13,31 @@
 body.hasNavigation #map
 	top 50px
 
-.map-controls 
+.map-hud .map-controls 
 	z-index	10
 	font-size 1.7em
-	position: relative;
 	padding: 5px;
-	//margin-left: 10px;
 	margin-top: 10px;
 	background-color: #fff;
 	border-radius: 4px;
 	min-height: 20px;
-	//margin-bottom: 20px;
 	border: 1px solid #ccc;
 	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+
+.map-hud .map-directions
+	z-index	10
+	font-size 1.0em
+	overflow hidden
+	padding: 5px;
+	margin-top: 10px;
+	background-color: #fff;
+	border-radius: 4px;
+	min-height: 20px;
+	border: 1px solid #ccc;
+	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+
+.map-hud .map-directions *
+	border-radius 4px
 
 .map-controls ul li a
 	padding 5px
