See #37. iPhone 5 full screen support.

--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -3,7 +3,7 @@
 html
 	head
 		title #{title}
-		meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no") //- For Mobile
+		meta(name="viewport", content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no") //- For Mobile
 		meta(http-equiv="cache-control", content="max-age=0")
 		meta(http-equiv="cache-control", content="no-cache")
 		meta(http-equiv="expires", content="0")
