--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -1,3 +1,5 @@
+map-shadow = 1px 1px 2px rgba(0,0,0,0.65)
+
 .map-container
 	padding 0
 	margin 	0
@@ -19,10 +21,10 @@ body.hasNavigation #map
 	padding: 5px;
 	margin-top: 10px;
 	background-color: #fff;
-	border-radius: 4px;
+	border-radius: 2px;
 	min-height: 20px;
 	border: 1px solid #ccc;
-	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+	box-shadow: map-shadow;
 
 .map-hud .map-directions
 	z-index	10
@@ -31,10 +33,10 @@ body.hasNavigation #map
 	padding: 5px;
 	margin-top: 10px;
 	background-color: #fff;
-	border-radius: 4px;
+	border-radius: 2px;
 	min-height: 20px;
 	border: 1px solid #ccc;
-	box-shadow: 0 1px 7px rgba(0,0,0,0.65);
+	box-shadow: map-shadow;
 
 .map-hud .map-directions *
 	border-radius 4px
