--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -1,4 +1,5 @@
 map-shadow = 1px 1px 2px rgba(0,0,0,0.65)
+map-border-radius = 4px
 
 .map-container
 	padding 0
@@ -21,7 +22,7 @@ body.hasNavigation #map
 	padding: 5px;
 	margin-top: 10px;
 	background-color: #fff;
-	border-radius: 2px;
+	border-radius: map-border-radius
 	min-height: 20px;
 	border: 1px solid #ccc;
 	box-shadow: map-shadow;
@@ -33,13 +34,13 @@ body.hasNavigation #map
 	padding: 5px;
 	margin-top: 10px;
 	background-color: #fff;
-	border-radius: 2px;
+	border-radius: map-border-radius
 	min-height: 20px;
 	border: 1px solid #ccc;
 	box-shadow: map-shadow;
 
 .map-hud .map-directions *
-	border-radius 4px
+	border-radius map-border-radius
 
 .map-controls ul li a
 	padding 5px
