Map UI improvements. See #26.

--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -4,15 +4,15 @@ block header
 	include leaflet.jade
 
 block content
-	div.container.map-container
+	div.full-container.map-container
 		div#map
-		div.container
+		div.full-container
 			div.map-hud.col-xs-12.col-sm-6.col-md-6.col-lg-4
 				div.map-controls
 					div.row
 						div.col-xs-1.col-sm-1.col-md-1
 							i.glyphicon.glyphicon-search
-						div.col-xs-7.col-sm-8.col-md-8
+						div.col-xs-8.col-sm-8.col-md-8
 							input(type="text", placeholder="Search").form-control.search
 						div.col-xs-1.col-sm-1.col-md-1
 							i.glyphicon.glyphicon-user 
