--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -16,28 +16,50 @@ map-border-radius = 4px
 body.hasNavigation #map
 	top 50px
 
-.map-hud .map-controls 
-	z-index	10
-	font-size 1.7em
-	padding: 5px;
-	margin-top: 10px;
-	background-color: #fff;
-	border-radius: map-border-radius
-	min-height: 20px;
-	border: 1px solid #ccc;
-	box-shadow: map-shadow;
+.map-hud {
 
-.map-hud .map-directions
-	z-index	10
-	font-size 1.0em
-	overflow hidden
-	padding: 5px;
-	margin-top: 10px;
-	background-color: #fff;
-	border-radius: map-border-radius
-	min-height: 20px;
-	border: 1px solid #ccc;
-	box-shadow: map-shadow;
+    height: 100%;
+    overflow-y: scroll;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+
+    .map-controls {
+    	z-index	10
+    	font-size 1.7em
+    	padding: 5px;
+    	margin-top: 10px;
+    	background-color: #fff;
+    	border-radius: map-border-radius
+    	min-height: 20px;
+    	border: 1px solid #ccc;
+    	box-shadow: map-shadow;
+
+        .row {
+            margin: 0px;
+
+            > * {
+                padding-left: 2px;
+                padding-right: 2px;
+                margin-left: 2px;
+                margin-right: 2px;
+            }
+        }
+
+    }
+    .map-directions {
+    	z-index	10
+    	font-size 1.0em
+    	overflow hidden
+    	padding: 5px;
+    	margin-top: 10px;
+    	background-color: #fff;
+    	border-radius: map-border-radius
+    	min-height: 20px;
+    	border: 1px solid #ccc;
+    	box-shadow: map-shadow;
+    }
+}
 
 .map-hud .map-directions *
 	border-radius map-border-radius
