--- a/app/public/css/style.styl
+++ b/app/public/css/style.styl
@@ -25,6 +25,10 @@ body
 body.hasNavigation
 	padding-top 50px
 
+.container-full
+    margin  0 auto
+    width   100%
+
 h1
 	color #8b1c1c;
 #global-nav li a
