Improved UI, see #26. Collapsing nav/directions panel.

--- a/app/server/views/layout_nav.jade
+++ b/app/server/views/layout_nav.jade
@@ -30,5 +30,6 @@ html
 	script(src='/js/views/home.js')
 	script(src='/js/controllers/homeController.js')
 	script(src='/js/form-validators/accountValidator.js')
+    script(src='/js/controllers/navController.js')
 
 	block scripts
