--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -37,12 +37,21 @@ body.hasNavigation #map
 
         .row {
             margin: 0px;
-
-            > * {
-                padding-left: 2px;
-                padding-right: 2px;
-                margin-left: 2px;
-                margin-right: 2px;
+            text-align: center;
+            > div {
+                padding-left: 0px;
+                padding-right: 0px;
+                margin-left: 0px;
+                margin-right: 0px;
+                > a {
+                    text-decoration: none !important;
+                }
+                > * {
+                    padding-left: 2px;
+                    padding-right: 2px;
+                    margin-left: 2px;
+                    margin-right: 2px;
+                }
             }
         }
 
