Fixed offline access for iOS. See #13.

--- a/app/public/css/map.styl
+++ b/app/public/css/map.styl
@@ -17,13 +17,14 @@ body.hasNavigation #map
 	top 50px
 
 .map-hud {
-
+    /*
     height: 100%;
     overflow-y: scroll;
     position: absolute;
     top: 0px;
     bottom: 0px;
-
+    */
+    
     .map-controls {
     	z-index	10
     	font-size 1.7em
