response time graph added to admin

--- a/app/server/views/admin.jade
+++ b/app/server/views/admin.jade
@@ -8,6 +8,7 @@ block content
 			h1 Admin Web UI	
 			div#activeUsers(style="min-width: 310px; min-height: 200px; height: 300px; margin: 0 auto")
 			div#requestsPerSecond(style="min-width: 310px; min-height: 200px; height: 300px; margin: 0 auto")
+			div#responseTime(style="min-width: 310px; min-height: 200px; height: 300px; margin: 0 auto")
 						
 block scripts
 	script(src="http://code.highcharts.com/highcharts.js")
