--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -15,6 +15,7 @@ html
 	body
 		include modals/alert
 		include modals/confirm
+		include navbar
 		block content
 		block scripts
 		//- For Account management and logging out	
