Worked on automated scheduling system. See #9.

--- a/app/server/views/home.jade
+++ b/app/server/views/home.jade
@@ -59,3 +59,4 @@ block scripts
     script(src="/js/controllers/graphController.js")
     script(src="/js/controllers/mapController.js")
     script(src="/js/views/map.js")
+    script(src="/js/controllers/scheduleController.js")
