Closes #9. Automated Course Registration is now working and tested. Improvements and other integrations need to be made, make another issue for those individually.

--- a/app/server/views/schedule.jade
+++ b/app/server/views/schedule.jade
@@ -8,6 +8,7 @@ block header
 block content
     div.full-container
         div#calendar
+        div.schedules
 
 block scripts
     script(src="/js/controllers/graphController.js")
