--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -5,8 +5,10 @@ html(lang="en", manifest="cache.manifest")
         meta(name="viewport", content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no") //- For Mobile
         meta(name="apple-mobile-web-app-capable", content="yes")
 
-        include vendors
-        
+        //include vendors
+        include bower_components
+        script(src="/js/controllers/socketController.js")       
+
         link(rel='stylesheet', href='/css/style.css')
         link(rel='stylesheet', href='/css/map.css')
         
