Improved Admin Web Console. See #33.

--- a/app/server/views/admin.jade
+++ b/app/server/views/admin.jade
@@ -13,32 +13,50 @@ block content
                 div.alert.alert-info
                     div.caption
                         h4 Version
-                        p.text-success.version-number 2.0.0
+                        p.text-success.version-number Unknown
             div.col-xs-12.col-sm-4.col-md-3.col-lg-3
                 div.alert.alert-info
                     div.caption
                         h4 Production Mode
-                        p.text-success.production-mode-enabled Enabled
+                        p.text-success.production-mode-enabled Unknown
             div.col-xs-12.col-sm-4.col-md-3.col-lg-3
                 div.alert.alert-info
                     div.caption
                         h4 Redis
-                        p.text-success.redis-enabled Enabled
+                        p.text-success.redis-enabled Unknown
             div.col-xs-12.col-sm-4.col-md-3.col-lg-3
                 div.alert.alert-info
                     div.caption
                         h4 Workers
-                        p.text-success.num-of-workers 4
+                        p.text-success.num-of-workers Unknown
             div.col-xs-12.col-sm-4.col-md-3.col-lg-3
                 div.alert.alert-info
                     div.caption
                         h4 Port
-                        p.text-success.port-num 8080
+                        p.text-success.port-num Unknown
             div.col-xs-12.col-sm-4.col-md-3.col-lg-3
                 div.alert.alert-info
                     div.caption
                         h4 Active Users
-                        p.text-success.num-of-users 1000
+                        p.text-success.num-of-users Unknown
+            div.col-xs-12.col-sm-4.col-md-3.col-lg-3
+                div.alert.alert-info
+                    div.caption
+                        h4 Operating System
+                        p.text-success.operating-system Unknown
+            div.col-xs-12.col-sm-4.col-md-3.col-lg-3
+                div.alert.alert-info
+                    div.caption
+                        h4 Uptime
+                        p.text-success.uptime Unknown
+            div.col-xs-12.col-sm-4.col-md-3.col-lg-3
+                div.alert.alert-info
+                    div.caption
+                        h4 Memory Usage
+                        p.text-success.memory-usage Unknown
+            div.clearfix
+            div.alert.alert-warning To see all of the running specifications please see 
+                a(href="/specs.json", target="_blank") specs.json
         
         hr
 
