--- a/app/server/views/admin.jade
+++ b/app/server/views/admin.jade
@@ -63,6 +63,7 @@ block content
         div.admin-graph#activeUsers()
         div.admin-graph#requestsPerSecond()
         div.admin-graph#responseTime()
+        div.admin-graph#lagPerSecond()
                         
 block scripts
     script(src="http://code.highcharts.com/highcharts.js")
